--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.sdk.BannerActivity"></activity>
+        <activity android:name=".activity.sdk.BannerBasicActivity"></activity>
         <activity android:name=".activity.BaseActivity" />
         <activity
             android:name=".MainActivity"
