--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.sdk.BannerBasicActivity"></activity>
+        <activity android:name=".activity.sdk.BannerBasicActivity" />
+
+        <!-- Lock screen orientation to portrait for interstitial demo -->
+        <activity android:name=".activity.sdk.InterstitialActivity" android:screenOrientation="portrait" />
         <activity android:name=".activity.BaseActivity" />
         <activity
             android:name=".MainActivity"
