Add list sample for banner

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".activity.sdk.BannerBasicActivity" />
+        <activity android:name=".activity.sdk.BannerListActivity" />
 
         <!-- Lock screen orientation to portrait for interstitial demo -->
         <activity android:name=".activity.sdk.InterstitialActivity" android:screenOrientation="portrait" />
