--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    // For RecyclerView
+    implementation 'com.google.android.material:material:+'
+
+    // Appier SDK
     implementation 'com.appier.android:ads-sdk:1.0.0-rc5'
 }
