Add mopub mediation module to project

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,46 @@ dependencies {
 
     // Appier SDK
     // implementation 'com.appier.android:ads-sdk:1.0.0-rc5'
+    // implementation('com.appier.android:mopub-mediation:1.0.0-rc4') {
+    //     transitive = true
+    //     exclude module: 'libAvid-mopub' // To exclude AVID
+    //     exclude module: 'moat-mobile-app-kit' // To exclude Moat
+    // }
+
+    // Yahoo Flurry SDK
+    // For mopub 4.20.0 compatibility, we use older version of flurry mediation and sdk
+    // https://github.com/mopub/mopub-android-mediation/blob/master/Flurry/CHANGELOG.md
+    implementation 'com.flurry.android:ads:10.1.0@aar'
+    implementation 'com.flurry.android:analytics:10.1.0@aar'
+    implementation 'com.mopub.mediation:flurry:10.1.0.0'
+
+    // MoPub SDK base
+    implementation('com.mopub:mopub-sdk-base:4.20.0@aar') {
+        transitive = true
+        exclude module: 'libAvid-mopub' // To exclude AVID
+        exclude module: 'moat-mobile-app-kit' // To exclude Moat
+    }
+
+    // MoPub SDK for native static (images)
+    implementation('com.mopub:mopub-sdk-native-static:4.20.0@aar') {
+        transitive = true
+        exclude module: 'libAvid-mopub' // To exclude AVID
+        exclude module: 'moat-mobile-app-kit' // To exclude Moat
+    }
+
+    // MoPub SDK for banner
+    implementation('com.mopub:mopub-sdk-banner:4.20.0@aar') {
+        transitive = true
+        exclude module: 'libAvid-mopub' // To exclude AVID
+        exclude module: 'moat-mobile-app-kit' // To exclude Moat
+    }
+
+    // MoPub SDK for interstitial
+    implementation('com.mopub:mopub-sdk-interstitial:4.20.0@aar') {
+        transitive = true
+        exclude module: 'libAvid-mopub' // To exclude AVID
+        exclude module: 'moat-mobile-app-kit' // To exclude Moat
+    }
 
     /*
      * The following dependencies are development only.
@@ -64,4 +104,7 @@ dependencies {
 
     // Import Appier SDK from source
     implementation project(':appier-sdk')
+
+    // Import Appier MoPub mediation SDK from source
+    implementation project(':appier-mopub-mediation')
 }
