--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,14 +18,17 @@
         android:theme="@style/AppTheme"
         android:networkSecurityConfig="@xml/network_security_config">
 
+        <activity android:name=".activity.BaseActivity" />
+
+        <!-- Lock screen orientation to portrait for interstitial demo -->
+        <activity android:name=".activity.sdk.InterstitialActivity" android:screenOrientation="portrait" />
+
         <activity android:name=".activity.sdk.BannerBasicActivity" />
         <activity android:name=".activity.sdk.BannerListActivity" />
         <activity android:name=".activity.sdk.BannerFloatingWindowActivity" />
 
-        <!-- Lock screen orientation to portrait for interstitial demo -->
-        <activity android:name=".activity.sdk.InterstitialActivity" android:screenOrientation="portrait" />
-        <activity android:name=".activity.BaseActivity" />
         <activity android:name=".activity.sdk.NativeBasicActivity" />
+        <activity android:name=".activity.sdk.NativeListActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
