--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,9 @@
         <activity android:name=".activity.sdk.NativeBasicActivity" />
         <activity android:name=".activity.sdk.NativeListActivity" />
         <activity android:name=".activity.sdk.NativeFloatingWindowActivity" />
+
+        <activity android:name=".activity.mediation.mopub.BannerBasicActivity" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
