rename package and class names to avoid conflict for activity class names

--- a/appier-sdk-sample/src/main/AndroidManifest.xml
+++ b/appier-sdk-sample/src/main/AndroidManifest.xml
@@ -31,8 +31,9 @@
         <activity android:name=".activity.sdk.NativeListActivity" />
         <activity android:name=".activity.sdk.NativeFloatingWindowActivity" />
 
-        <activity android:name=".activity.mediation.mopub.BannerBasicActivity" />
-        <activity android:name=".activity.mediation.mopub.BannerFloatingWindowActivity" />
+        <activity android:name=".activity.mediation.MoPubBannerBasicActivity" />
+        <activity android:name=".activity.mediation.MoPubBannerFloatingWindowActivity" />
+        <activity android:name=".activity.mediation.MoPubNativeBasicActivity" />
 
         <activity
             android:name=".MainActivity"
