--- a/appier-sdk-sample/src/main/AndroidManifest.xml
+++ b/appier-sdk-sample/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity android:name=".activity.mediation.MoPubBannerBasicActivity" />
         <activity android:name=".activity.mediation.MoPubBannerFloatingWindowActivity" />
         <activity android:name=".activity.mediation.MoPubNativeBasicActivity" />
+        <activity android:name=".activity.mediation.MoPubNativeFloatingWindowActivity" />
 
         <activity
             android:name=".MainActivity"
