add mopub native list integration samples

--- a/appier-sdk-sample/src/main/AndroidManifest.xml
+++ b/appier-sdk-sample/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <activity android:name=".activity.mediation.MoPubBannerFloatingWindowActivity" />
 
         <activity android:name=".activity.mediation.MoPubNativeBasicActivity" />
+        <activity android:name=".activity.mediation.MoPubNativeListActivity" />
         <activity android:name=".activity.mediation.MoPubNativeFloatingWindowActivity" />
 
         <activity
