--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
 rootProject.name='pmp-android-sample'
-include ':appier-sdk-sample', ':appier-sdk', ':appier-mopub-mediation'
+include ':appier-sdk-sample'
