--- a/appier-sdk-sample/src/main/AndroidManifest.xml
+++ b/appier-sdk-sample/src/main/AndroidManifest.xml
@@ -74,6 +74,9 @@
         <activity android:name="com.mopub.mobileads.RewardedMraidActivity" android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name="com.mopub.mobileads.MraidVideoPlayerActivity" android:configChanges="keyboardHidden|orientation|screenSize"/>
 
+        <!-- For the backward compatibility of Android P -->
+        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+
     </application>
 
 </manifest>
