--- a/appier-sdk-sample/build.gradle
+++ b/appier-sdk-sample/build.gradle
@@ -17,7 +17,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -105,5 +106,5 @@ dependencies {
     // implementation project(':appier-sdk')
 
     // Import Appier MoPub mediation SDK from source
-    // implementation project(':appier-mopub-mediation')
+    //implementation project(':appier-mopub-mediation')
 }
