--- a/appier-sdk-sample/build.gradle
+++ b/appier-sdk-sample/build.gradle
@@ -60,8 +60,8 @@ dependencies {
     implementation 'com.google.android.material:material:+'
 
     // Appier SDK
-    implementation 'com.appier.android:ads-sdk:1.1.0'
-    implementation('com.appier.android:mopub-mediation:1.1.0') {
+    implementation 'com.appier.android:ads-sdk:1.1.0-alpha1'
+    implementation('com.appier.android:mopub-mediation:1.1.0-alpha1') {
         transitive = true
         exclude module: 'libAvid-mopub' // To exclude AVID
         exclude module: 'moat-mobile-app-kit' // To exclude Moat
