--- a/appier-sdk-sample/src/main/AndroidManifest.xml
+++ b/appier-sdk-sample/src/main/AndroidManifest.xml
@@ -85,6 +85,7 @@
         <!-- For the backward compatibility of Android P -->
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
 
+        <!-- [AdMob] Application ID -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-9553415307894531~1610766857"/>
