add standalone video ad  sample

--- a/appier-sdk-sample/src/main/AndroidManifest.xml
+++ b/appier-sdk-sample/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
 
         <activity android:name=".activity.BaseActivity" />
 
+        <activity android:name=".activity.sdk.VideoActivity" />
+
         <activity android:name=".activity.sdk.InterstitialActivity" />
 
         <activity android:name=".activity.sdk.BannerBasicActivity" />
