--- a/appier-sdk-sample/build.gradle
+++ b/appier-sdk-sample/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 29
@@ -48,6 +49,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'com.google.firebase:firebase-messaging:17.3.4'
+    implementation 'androidx.media2:media2:1.0.0-alpha04'
+
 
     // AIQUA SDK
     implementation ('com.quantumgraph.sdk:QG:5.9.5') {
@@ -62,13 +65,13 @@ dependencies {
     implementation 'com.google.android.material:material:+'
 
     // Appier SDK
-    implementation 'com.appier.android:ads-sdk:1.1.5'
-    implementation 'com.appier.android:admob-mediation:1.0.0'
-    implementation('com.appier.android:mopub-mediation:1.1.3') {
-        transitive = true
-        exclude module: 'libAvid-mopub' // To exclude AVID
-        exclude module: 'moat-mobile-app-kit' // To exclude Moat
-    }
+//    implementation 'com.appier.android:ads-sdk:1.1.5'
+//    implementation 'com.appier.android:admob-mediation:1.0.0'
+//    implementation('com.appier.android:mopub-mediation:1.1.3') {
+//        transitive = true
+//        exclude module: 'libAvid-mopub' // To exclude AVID
+//        exclude module: 'moat-mobile-app-kit' // To exclude Moat
+//    }
 
     // MoPub SDK base
     implementation('com.mopub:mopub-sdk-base:5.11.1@aar') {
@@ -98,21 +101,36 @@ dependencies {
         exclude module: 'moat-mobile-app-kit' // To exclude Moat
     }
 
+    // MoPub SDK for rewarded video
+    implementation('com.mopub:mopub-sdk-rewardedvideo:5.11.1@aar') {
+        transitive = true
+        exclude module: 'libAvid-mopub' // To exclude AVID
+        exclude module: 'moat-mobile-app-kit' // To exclude Moat
+    }
+
     implementation 'com.google.android.gms:play-services-ads:19.0.1'
 
     /*
      * The following dependencies are development only.
      */
 
+    // Media2
+    // Interacting with MediaSessions
+    implementation "androidx.media2:media2-session:1.1.2"
+    // optional - UI widgets for VideoView and MediaControlView
+    implementation "androidx.media2:media2-widget:1.1.2"
+    // optional - Implementation of a SessionPlayer
+    implementation "androidx.media2:media2-player:1.1.2"
+
     // memory leak checking
 //    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.1'
 
     // Import Appier SDK from source
-//    implementation project(':appier-sdk')
+    implementation project(':appier-sdk')
 
     // Import Appier AdMob mediation SDK from source
-//    implementation project(':appier-admob-mediation')
+    implementation project(':appier-admob-mediation')
 
     // Import Appier MoPub mediation SDK from source
-//    implementation project(':appier-mopub-mediation')
+    implementation project(':appier-mopub-mediation')
 }
