--- a/appier-sdk-sample/build.gradle
+++ b/appier-sdk-sample/build.gradle
@@ -17,6 +17,11 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -49,7 +54,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'com.google.firebase:firebase-messaging:17.3.4'
-    implementation 'androidx.media2:media2:1.0.0-alpha04'
 
 
     // AIQUA SDK
@@ -74,35 +78,28 @@ dependencies {
 //    }
 
     // MoPub SDK base
-    implementation('com.mopub:mopub-sdk-base:5.11.1@aar') {
+    implementation('com.mopub:mopub-sdk-base:5.14.0@aar') {
         transitive = true
         exclude module: 'libAvid-mopub' // To exclude AVID
         exclude module: 'moat-mobile-app-kit' // To exclude Moat
     }
 
     // MoPub SDK for native static (images)
-    implementation('com.mopub:mopub-sdk-native-static:5.11.1@aar') {
+    implementation('com.mopub:mopub-sdk-native-static:5.14.0@aar') {
         transitive = true
         exclude module: 'libAvid-mopub' // To exclude AVID
         exclude module: 'moat-mobile-app-kit' // To exclude Moat
     }
 
     // MoPub SDK for banner
-    implementation('com.mopub:mopub-sdk-banner:5.11.1@aar') {
+    implementation('com.mopub:mopub-sdk-banner:5.14.0@aar') {
         transitive = true
         exclude module: 'libAvid-mopub' // To exclude AVID
         exclude module: 'moat-mobile-app-kit' // To exclude Moat
     }
 
     // MoPub SDK for interstitial
-    implementation('com.mopub:mopub-sdk-interstitial:5.11.1@aar') {
-        transitive = true
-        exclude module: 'libAvid-mopub' // To exclude AVID
-        exclude module: 'moat-mobile-app-kit' // To exclude Moat
-    }
-
-    // MoPub SDK for rewarded video
-    implementation('com.mopub:mopub-sdk-rewardedvideo:5.11.1@aar') {
+    implementation('com.mopub:mopub-sdk-fullscreen:5.14.0@aar') {
         transitive = true
         exclude module: 'libAvid-mopub' // To exclude AVID
         exclude module: 'moat-mobile-app-kit' // To exclude Moat
@@ -114,13 +111,6 @@ dependencies {
      * The following dependencies are development only.
      */
 
-    // Media2
-    // Interacting with MediaSessions
-    implementation "androidx.media2:media2-session:1.1.2"
-    // optional - UI widgets for VideoView and MediaControlView
-    implementation "androidx.media2:media2-widget:1.1.2"
-    // optional - Implementation of a SessionPlayer
-    implementation "androidx.media2:media2-player:1.1.2"
 
     // memory leak checking
 //    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.1'
