--- a/appier-sdk-sample/build.gradle
+++ b/appier-sdk-sample/build.gradle
@@ -69,9 +69,9 @@ dependencies {
     implementation 'com.google.android.material:material:+'
 
     // Appier SDK
-    implementation 'com.appier.android:ads-sdk:2.0.0-beta.4'
+    implementation 'com.appier.android:ads-sdk:2.0.+'
 //    implementation 'com.appier.android:admob-mediation:1.0.0'
-    implementation('com.appier.android:mopub-mediation:2.0.0-beta.4') {
+    implementation('com.appier.android:mopub-mediation:2.0.+') {
         transitive = true
         exclude module: 'libAvid-mopub' // To exclude AVID
         exclude module: 'moat-mobile-app-kit' // To exclude Moat
