--- a/appier-sdk-sample/build.gradle
+++ b/appier-sdk-sample/build.gradle
@@ -11,8 +11,8 @@ android {
         minSdkVersion 19
         targetSdkVersion 29
         multiDexEnabled true
-        versionCode 7
-        versionName "1.2.0"
+        versionCode 8
+        versionName "1.3.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -69,9 +69,9 @@ dependencies {
     implementation 'com.google.android.material:material:+'
 
     // Appier SDK
-    implementation 'com.appier:ads-android:2.0.0-rc.2'
+    implementation 'com.appier:ads-android:2.0.0'
     implementation 'com.appier:ads-admob-mediation:1.0.0'
-    implementation('com.appier:ads-mopub-mediation:2.0.0-rc.2') {
+    implementation('com.appier:ads-mopub-mediation:2.0.0') {
         transitive = true
         exclude module: 'libAvid-mopub' // To exclude AVID
         exclude module: 'moat-mobile-app-kit' // To exclude Moat
